--- a/app/views/storepromotions/_form.html.erb
+++ b/app/views/storepromotions/_form.html.erb
@@ -12,7 +12,7 @@
       <div class="pricing clearfix">
         <%= f.input :sp_spare_40, label: 'List Price' %>
         <%= f.input :sp_spare_41, label: 'Current Price' %>
-        <%= f.input :sp_percentage_01, label: 'Percentage' %>
+        <%= f.input :sp_percentage_01, label: 'Up to Percentage' %>
         <%= f.input :sp_percentage_02, label: 'Percentage' %>
       </div>
       <div class="pricing clearfix">
