--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -6,21 +6,28 @@
 .st_warp .st_left, .st_warp .st_right{float:left;width:50%;padding:10px;}
 
 .st_warp .st_box{border-bottom:1px solid #ccc;float:left;width:49%;margin:0% 0.5% 1% 0.5%;}
-.st_warp .st_box .st_image{float:left;width:18%;margin:1%;}
+.st_warp .st_box .st_image{float:left;width:18%;margin:1%;position:relative;}
 .st_warp .st_box .st_image img{width:100%;height:70px;vertical-align:middle;object-fit:contain;}
+.st_warp .st_box .st_image .just_text{position:relative;}
+.st_warp .st_box .st_image .goto_d{position:absolute;top:0;left:0;font-size:18px;color:#fff;}
+.st_warp .st_box .st_image .goto_d a{color:rgb(0,0,0,0);display:block;}
+.st_warp .st_box .st_image p{text-align:center;font-weight:bold;}
+.st_warp .st_box .st_image span{display:block;font-size:30px;text-align:center;line-height:1;}
+.st_warp .st_box .st_image em.off{display:block;font-size:25px;text-align:center;line-height:1;}
 .st_warp .st_box .inner{float:left;width:77%;margin-left:3%;padding:7px 7px 0 0;height:100px;}
 .st_warp .st_box .inner p{text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;width:310px;overflow:hidden;word-break:break-word;font-size:13px;}
-.st_warp .st_box .inner p .st_title{border:1px solid;padding:5px;font-weight:bold;}
-.st_warp .st_box .inner p a{background:#000;padding:0 5px;color:#fff;}
+.st_warp .st_box .inner em.st_title{border:1px solid #ccc;padding:2px 5px;font-weight:bold;display:inline-block;font-size:13px;}
+.st_warp .st_box .inner .admin{display:inline-block;}
+.st_warp .st_box .inner .admin a{background:#000;padding:0 5px;color:#fff;}
 .st_warp .st_box .inner em{}
 .st_warp .st_box .inner span{margin:5px 0;}
 .st_warp .st_box .inner span, .tab-menu-text-alt p, .deal_text p
 {line-height:1.4;height:1.4em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:1;font-size:13px;}
 .st_warp .st_box .inner span a{color:#616161;display:block;}
 .st_warp .st_box .inner .pricing .span_01{color:#616161;text-decoration:line-through;}
-.st_warp .st_box .inner .date_info{}
+.st_warp .st_box .inner .date_info{display:inline-block;float:right;}
 .st_warp .st_box .inner .date_info em{font-size:12px;color:#616161;}
-.st_warp .st_box .inner .date_info em.expired{color:#ff4d4d;}
+.st_warp .st_box .inner .date_info em.expired{color:#fff;background:#ff4d4d;padding:2px 5px;border-radius:10px;}
 .st_warp .st_box .inner .date_info em.endtoday{color:#ffa500;}
 .st_warp .st_middle{margin-top:30px;}
 .st_warp .st_middle .deals_card{width:18%;}
@@ -42,7 +49,14 @@
 .tab-menu-text{width:100%;height:81px;margin-top:15px;cursor:pointer;padding:3px 5px;transition:400ms all;border-bottom:1px solid #ccc;}
 /*.tab-menu-text:hover{background:rgba(0,0,0,.4);}*/
 
-.tab-menu-img img{width:50px;height:50px;overflow:hidden;float:left;/*border-radius:100%;*/object-fit:contain;}
+.tab-menu-img{float:left;}
+.tab-menu-img .just_text{position:relative;}
+.tab-menu-img .goto_d{position:absolute;top:0;left:0;font-size:18px;color:#fff;}
+.tab-menu-img .goto_d a{color:rgb(0,0,0,0);display:block;}
+.tab-menu-img p{text-align:center;font-weight:bold;}
+.tab-menu-img span{display:block;font-size:25px;text-align:center;line-height:1;}
+.tab-menu-img em.off{display:block;font-size:20px;text-align:center;line-height:1;}
+/*.tab-menu-img img{width:50px;height:50px;overflow:hidden;float:left;object-fit:contain;}*/
 .tab-menu-text-title{color:#000;white-space: nowrap;text-overflow:ellipsis;overflow:hidden;padding-right:15px;font-size:13px;position:relative;left:10px;top:0;}
 .tab-menu-text-title p{display:inline-block;}
 .tab-menu-text-title .date_info{display:inline;float:right;font-size:10px;}
@@ -95,11 +109,17 @@
 
 
 .sp_wrap .sp_right .sotre_card{width:31.33%;}
-.sp_wrap .sp_right .sp_card{border-bottom:1px solid #ccc;float:left;width:48%;margin:1%;height:100px;position:relative;}
+.sp_wrap .sp_right .sp_card{border-bottom:1px solid #ccc;float:left;width:48%;margin:1%;height:100px;position:relative;padding:10px;}
 .sp_wrap .sp_right .sp_card .admin{font-size:12px;position:absolute;bottom:0;right:0;}
 .sp_wrap .sp_right .sp_image{float:left;width:15%;height:100px;position:relative;}
 .sp_wrap .sp_right .sp_image img{width:100%;height:70px;object-fit:contain;position:absolute;top:40%;left:50%;transform:translate(-50%, -50%);}
 .sp_wrap .sp_right .sp_image .date_m{display:none;}
+.sp_wrap .sp_right .sp_image .just_text{position:relative;}
+.sp_wrap .sp_right .sp_image .goto_d{position:absolute;top:0;left:0;font-size:18px;color:#fff;}
+.sp_wrap .sp_right .sp_image .goto_d a{color:rgb(0,0,0,0);display:block;}
+.sp_wrap .sp_right .sp_image p{text-align:center;font-weight:bold;}
+.sp_wrap .sp_right .sp_image span{display:block;font-size:30px;text-align:center;line-height:1;}
+.sp_wrap .sp_right .sp_image em.off{display:block;font-size:25px;text-align:center;line-height:1;}
 .sp_wrap .sp_right .date_comm em.expired{background:#ff4d4d;color:#fff;padding:4px 5px;font-size:11px;border-radius:10px;}
 .sp_wrap .sp_right .date_comm em.endtoday{background:#ffa500;color:#fff;padding:4px 5px;font-size:11px;border-radius:10px;}
 .sp_wrap .sp_right .inner{float:left;width:80%;margin-left:5%;}
@@ -141,6 +161,7 @@
   .sp_wrap .sp_right .sp_card{float:left;width:48%;margin:1%;box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);padding: 5px 10px 10px 10px;height:220px;}
   .sp_wrap .sp_right .sp_image{float:none;width:100%;}
   .sp_wrap .sp_right .sp_image img{height:70%;object-fit:contain;z-index:-1;}
+  .sp_wrap .sp_right .date_comm em.expired{position:absolute;top:0;left:0;}
   .sp_wrap .sp_right .inner{float:none;width:100%;margin:0;}
   .sp_wrap .sp_right .inner .sp_title{font-size:12px;}
   .sp_wrap .sp_right .inner em{font-size:10px;}
