--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -55,8 +55,13 @@
         
           <% @storepromotions.each do |storepromotion| %>
             <div class="sp_card clearfix">
-              <div class="sp_image">                
-                <%= link_to image_tag(storepromotion.sp_image, alt: storepromotion.sp_title, title: storepromotion.sp_store_name), storepromotion %>
+              <div class="sp_image">    
+                <!--<%= link_to image_tag(storepromotion.sp_image, alt: storepromotion.sp_title, title: storepromotion.sp_store_name), storepromotion %>-->
+              
+                <div class="just_text">
+                  <p>UP TO</p><span><%= number_to_percentage(storepromotion.sp_percentage_01, precision: 0) %></span><em class="off">OFF</em>
+                </div>
+                <div class="goto_d"><%= link_to "GOTO DETAIL PAGE", storepromotion %></div>
                 <div class="date_m date_comm">
                   <% if storepromotion.sp_end_date.present? %>
                     <% if storepromotion.sp_spare_60 && (storepromotion.sp_spare_60 < DateTime.now) %>
@@ -76,10 +81,12 @@
               </div>
               <div class="inner">
                 <p><span class="index_title"><%= storepromotion.spcategory.name %></span>
+                  <!--
                   <% if storepromotion.sp_spare_40.present? || storepromotion.sp_spare_42.present?%>
                   <% else %>
                   <% if storepromotion.sp_percentage_01.present? %> Up to <%= number_to_percentage(storepromotion.sp_percentage_01, precision: 0) %> OFF<% end %>
                   <% end %>
+                -->
                 </p>
                 <div class="date_pc date_comm">
                   <% if storepromotion.sp_end_date.present? %>
