--- a/app/views/deals/_body_promocodes.html.erb
+++ b/app/views/deals/_body_promocodes.html.erb
@@ -77,9 +77,25 @@
           <div class="box">
             <p>Coupon</p>
             <% if promocode.p_coupon_deal.present? %>
-              <em><%= promocode.p_coupon_deal %></em>
+              <% if promocode.p_coupon_deal.present? %>
+                <em><%= promocode.p_coupon_deal %></em>
+              <% else %>
+                <em>-</em>
+              <% end %>
             <% else %>
-              <em>-</em>
+              <% if promocode.p_spare_55.present? %>
+                <% if promocode.p_spare_55.present? %>
+                  <em><%= number_to_percentage(promocode.p_spare_55, precision: 0) %></em>
+                <% else %>
+                  <em>-</em>
+                <% end %>
+              <% else %>
+                <% if promocode.p_spare_56.present? %>
+                  <em><%= number_to_currency(promocode.p_spare_56) %></em>
+                <% else %>
+                  <em>-</em>
+                <% end %>
+              <% end %>
             <% end %>
           </div>
          </div>
