--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -9,11 +9,11 @@
 
         <%= f.input :himage, label: 'Choose Image' %>
         <%= f.select :h_spare_03, ([["Do You Have A Banner?", ""], "YES"])%>
-        <%= f.select :h_spare_06, ([["No PRIME?", ""], "Yes"])%>
         <%= f.select :h_spare_07, ([["In Stock", ""], "few stock left"])%>
         <%= f.select :h_spare_10, ([["Subscribe & Save?", ""], "Yes"])%>
         <%= f.select :h_spare_12, ([["No Tax?", ""], "Yes"])%>
         <%= f.select :h_spare_13, ([["Write Blog?", ""], "Yes"])%>
+        <%= f.select :h_spare_06, ([["Ship to Korea", ""], "Yes"])%>
         <div class="form_btn"><%= f.button :submit %></div><br />
         <%= f.input :h_image, label: 'Image URL' %>
         <%= f.input :h_link, label: 'Product URL' %>
