--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -5,9 +5,9 @@
 
     <%= f.input :pimage, label: 'Choose Image' %>
     <%= f.select :p_banner, options_for_select([["Do You Have A Banner?", ""], "YES"])%>
-    <%= f.select :p_spare_01, options_for_select([["NO prime?", ""], "Yes"])%>
     <%= f.select :p_spare_02, options_for_select([["In Stock", ""], "Only in a few stock left"])%>
-    <%= f.select :p_spare_05, options_for_select([["Subscribe & Save?", ""], "Yes"])%><br /><br />
+    <%= f.select :p_spare_05, options_for_select([["Subscribe & Save?", ""], "Yes"])%>
+    <%= f.select :p_spare_01, options_for_select([["Ship to Korea", ""], "Yes"])%><br /><br />
     <div class="pricing clearfix">
       <%= f.input :p_spare_26, label: 'List Price' %>
       <%= f.input :p_spare_27, label: 'Discount Percentage' %>
