--- a/app/views/hotdeals/hashtags.html.erb
+++ b/app/views/hotdeals/hashtags.html.erb
@@ -32,8 +32,8 @@
             <h3><%= render_with_hashtags(hotdeal.h_spare_05.to_s) %></h3>
             <p><%= link_to hotdeal.h_title, hotdeal %></p>
             <div class="price">
-              <% if hotdeal.h_list_price.present? %>
-                <em>$<%= hotdeal.h_list_price %></em>$<%= hotdeal.h_price %>
+              <% if hotdeal.h_spare_43.present? %>
+                <em>$<%= hotdeal.h_spare_43 %></em>$<%= hotdeal.h_spare_42 %>
               <% else %>
                 <em><%= number_to_currency(hotdeal.h_spare_41) %></em><%= number_to_currency(hotdeal.h_spare_42) %>
               <% end %>
