--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -26,7 +26,7 @@
       <!-- <%= f.input :p_spare_27, label: 'Discount Percentage' %> -->
       <%= f.input :p_spare_03, label: 'Average Rate' %>
       <%= f.input :p_spare_04, label: 'Number of Reviews' %>
-      <%= f.input :p_coupon_deal, label: 'Coupon Deals?' %>
+      <!-- # <%= f.input :p_coupon_deal, label: 'Coupon Deals?' %> -->
       <%= f.input :p_spare_55, label: 'Coupon(%)' %>
       <%= f.input :p_spare_56, label: 'Coupon($)' %>
       <%= f.input :p_extra_deal, label: 'Extra Deals?' %>
